# hyperbolic_planning

./: .gitignore  HypoV2.ipynb  Intervals_Hyper.ipynb  MDP_Hyper.ipynb  MDP_Hyperbolic.ipynb  README.md  main.py  pyproject.toml  requirements.txt
config/: ablation_experiments.yaml  experiment_config.yaml  sampling_ablation.yaml  tight_frozen_experiment.yaml
results/: experiment_results.json
results/data/: dataset_tight.pkl
scripts/: evaluate.py  generate_data.py  generate_figures.py  run_ablation_experiments.py  run_all_experiments.py  run_sampling_ablation.py  train_policies.py  train_representations.py
src/: __init__.py
src/core/: __init__.py  data_generation.py  environment.py
src/core/datasets/: __init__.py  ablation_configs.py  interval_dataset.py  trajectory_dataset.py
src/evaluation/: __init__.py  evaluator.py  metrics.py
src/models/: __init__.py  encoders.py  policies.py  utils.py
src/training/: __init__.py  losses.py  trainer.py
src/visualization/: __init__.py  experiment_viz.py  hyperbolic_viz.py
tests/: conftest.py  test_data_generation.py  test_environment.py  test_evaluation.py  test_interval_dataset.py  test_loss.py  test_metrics.py  test_models.py  test_training.py  test_trajectory_dataset.py
